--- a/src/App.css
+++ b/src/App.css
@@ -5,9 +5,11 @@ body {
 }
 
 .app-main {
-  max-width: 470px;
-  margin: 0 auto;
-  padding: 0.2rem 0.1rem 0.8rem 0.1rem;
+  max-width: 100vw;
+  width: 100vw;
+  margin: 0;
+  padding: 0.15rem 0.01rem 0.4rem 0.01rem;
+  box-sizing: border-box;
   font-family: sans-serif;
   background: none;
   min-height: 100vh;
@@ -18,8 +20,12 @@ body {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: repeat(4, 1fr);
-  gap: 1.1rem;
+  gap: 0.9rem;
   margin: 0.6rem 0 1.6rem 0;
+  width: 100vw;
+  max-width: 100vw;
+  padding: 0 0.5vw;
+  box-sizing: border-box;
 }
 
 .spiller-rute {
@@ -27,6 +33,8 @@ body {
   color: #fff8dc;
   border-radius: 28px;
   padding: 0.8rem 0.4rem 0.3rem 0.4rem;
+  padding-left: 13px;
+  padding-right: 13px;
   min-height: 186px;
   min-width: 130px;
   display: flex;
@@ -228,6 +236,7 @@ h2 {
   .grid-container {
     gap: 0.3rem;
     margin: 0.6rem 0 0.8rem 0;
+    padding: 0 0.2vw;
   }
   .spiller-rute,
   .spiller-rute.tom {
@@ -235,5 +244,16 @@ h2 {
     min-height: 105px;
     font-size: 1rem;
     padding: 0.28rem 0.13rem 0.1rem 0.13rem;
+    padding-left: 7px;
+    padding-right: 7px;
+  }
+  .simple-y-btn {
+    width: 56px;
+    height: 56px;
+    min-width: 56px;
+    min-height: 56px;
+    max-width: 56px;
+    max-height: 56px;
+    font-size: 1rem;
   }
 }
